--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "react-from-the-ground-up-setup",
+  "name": "resource-manager",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "start": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js",
-    "test" : "jasmine"
+    "test" : "jest"
   },
   "author": "CodeWithTim",
   "license": "ISC",
