--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js",
-    "test" : "jest"
+    "test": "jest"
   },
   "author": "CodeWithTim",
   "license": "ISC",
@@ -24,6 +24,9 @@
   },
   "devDependencies": {
     "babel-plugin-transform-runtime": "^6.23.0",
-    "jasmine": "^2.8.0"
+    "enzyme": "^3.1.1",
+    "jasmine": "^2.8.0",
+    "react-addons-test-utils": "^15.6.2",
+    "react-dom": "^15.6.2"
   }
 }
